[project]
name = "comfyui-image-inpainting"
description = "Nodes:VAE Encode Inpaint, VAE Decode Inpaint, ColorCorrection Inpaint, ImagePreprocess Inpaint, ImagePostprocess Inpaint, Load Model Inpaint, Inpainting (using Model)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/SherryXieYuchen/ComfyUI-Image-Inpainting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Image-Inpainting"
Icon = ""
